// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldLabel should match snapshot when it is not optional field 1`] = `
.c0 {
  display: inline-block;
  font-weight: bold;
}

<span
  className="c0"
>
  Test field
   
</span>
`;

exports[`FieldLabel should match snapshot when it is optional field 1`] = `
.c0 {
  display: inline-block;
  font-weight: bold;
}

.c1 {
  font-style: italic;
  font-weight: normal;
}

<span
  className="c0"
>
  Test field
   
  <span
    className="c1"
  >
     (optional)
  </span>
</span>
`;
